2004-02-04	blytkerchan
	* empty_down.html: new file
	* table_down.html: ditto
	* download.html: ditto

2004-02-03	blytkerchan
	* empty_dev.html, empty_lang.html: new files

2004-02-02	blytkerchan
	* ChangeLog: correct dates
	* design.html, development.html, empty.html, goals.html, how_you_can_help.html, index.html, jailop.html, jailtype.html, language.html, license.html, progress.html, tech_arch.html: add menu bar
	* development.html, license.html, tech_arch.html: use table_dev.html in stead of table.html
	* jailop.html, jailtype.html, language.html: use table_lang.html in stead of table.html
	*  menu.html, table_dev.html, table_lang.html: new files
	* jail.css: new style table.menu
	
2004-01-30	blytkerchan
	* license.html: new file

	* *.html: re-organize to put the SF logo at the foot of the page..

2004-01-29	blytkerchan
	* design.html: homogenize (normalize?) style
	* tech_arch.html: ditto

CVS tag site_update_20040129
	* jailtype.html: add words about pre-defined associative container types

2004-01-28	blytkerchan
	* jailtype.html: add words on pre-defined container types

2004-01-27	blytkerchan
	* jailtype.html: add words on pre-defined types

2004-01-26	blytkerchan
	* jail.css: define caption style
	* jailtype.html: add words about namespaces, classes, etc. and start
	on pre-defined types

	* TODO: new file
	* jailtype.html: ditto
	* jail.css: add definitions for h3, table.toc, p.notice, a.toc:link, a.toc:active and a.toc:visited.
	* jailop.html: add a lot of words :)
	* table.html: use the ``toc'' table class to define the style
	add a link to jailtype.html

2004-01-21	blytkerchan
	* *.html: link to jail.css stylesheet
	set anchor named "top"
	normalize use of headers (h1 for the first title, etc.)
	* *.html (except table.html): make a "back to top" link at the bottom
	* jail.css: new file
	* jailop.html: ditto

2004-01-20	blytkerchan
	* index.html: roll back to revision 1.10
	remove alignment from SF logo

	* poll.css: new style for result_table_title