@@ -1,3 +1,6 @@
+2003-02-05	blytkerchan
+	* download.html: add words on versions and concluding remark
+
 2004-02-04	blytkerchan
 	* empty_down.html: new file
 	* table_down.html: ditto
